--- a/index.html
+++ b/index.html
@@ -39,13 +39,28 @@
         .introduction h2 {
             font-size: 24px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
-       .introduction p {
+        .introduction p {
             font-size: 16px;
             line-height: 1.5;
             margin-bottom: 15px;
+        }
+
+        .introduction ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .introduction li {
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 10px;
+        }
+
+        .introduction li strong {
+            font-weight: bold;
         }
 
         /* Footer */
@@ -68,6 +83,7 @@
         <section class="introduction">
             <h2>Introduction</h2>
             <p>The 2008 housing market collapse marked one of the most significant economic crises in recent history, triggering widespread repercussions that were felt across multiple sectors of the economy. This catastrophic event resulted from a combination of various interconnected factors ranging from monetary policy and consumer behavior to structural shifts in the housing market. Understanding this "perfect storm" involves examining the sequential events and conditions that led to the collapse, highlighting how each component interacted to create a fragile financial ecosystem. Here are the key elements that contributed to the crisis:</p>
+            
             <ul>
                 <li><strong>Interest and Inflation:</strong> The period leading up to the crisis saw low interest rates, which encouraged borrowing and made mortgage loans more accessible. However, rising inflation also became a concern.</li>
                 <li><strong>Consumer Price Index (CPI):</strong> The CPI reflected rising consumer costs, including housing, during the pre-crisis period, indicating that more money was being spent on necessities, which compromised household budgets.</li>
