--- a/index.html
+++ b/index.html
@@ -79,58 +79,50 @@
         <h1>The Perfect Storm: Understanding the 2008 Housing Crisis</h1>
     </header>
 
-    <main>
-        <section class="introduction">
-            <h2>Introduction</h2>
-            <p>The 2008 housing market collapse marked one of the most significant economic crises in recent history, triggering widespread repercussions that were felt across multiple sectors of the economy. This catastrophic event resulted from a combination of various interconnected factors ranging from monetary policy and consumer behavior to structural shifts in the housing market. Understanding this "perfect storm" involves examining the sequential events and conditions that led to the collapse, highlighting how each component interacted to create a fragile financial ecosystem. Here are the key elements that contributed to the crisis:</p>
-            
-            <ul>
-                <li><strong>Interest and Inflation:</strong> The period leading up to the crisis saw low interest rates, which encouraged borrowing and made mortgage loans more accessible. However, rising inflation also became a concern.</li>
-                <li><strong>Consumer Price Index (CPI):</strong> The CPI reflected rising consumer costs, including housing, during the pre-crisis period, indicating that more money was being spent on necessities, which compromised household budgets.</li>
-                <li><strong>HPI by State:</strong> Home Price Index (HPI) varied significantly across states, with many areas experiencing unsustainable increases in home prices during the housing bubble. This created disparities in housing affordability.</li>
-                <li><strong>Vacant Properties:</strong> As home prices began to fall, many homeowners who had purchased during the peak were unable to sell their homes, leading to an increase in vacant properties as foreclosures began to rise.</li>
-                <li><strong>Foreclosure:</strong> The rising rates of foreclosure resulted when homeowners, many with subprime mortgages, could no longer afford their payments, causing a surge in properties entering the market and further driving down prices.</li>
-                <li><strong>Rent Occupied:</strong> With many people losing their homes, the demand for rental properties increased, leading to higher occupancy rates in rented homes but also pushing up rental prices in many markets.</li>
-                <li><strong>Unemployment:</strong> The housing market collapse contributed to widespread job losses, leading to higher unemployment rates as businesses shuttered or reduced their workforce due to economic uncertainty and less consumer spending.</li>
-            </ul>
-        </section>
-
-        <section>
-            <iframe width="120%" height="1200" frameborder="0"
-                src="https://observablehq.com/embed/3ec0efae4de0bb26@188?cell=*"></iframe>
-        </section>
-
-        <section>
-            <iframe width="100%" height="1200" frameborder="0"
-                src="https://observablehq.com/embed/a630956182f35eb2@187?cell=*"></iframe>
-        </section>
-
-        <section>
-            <iframe width="100%" height="950" frameborder="0"
-                src="https://observablehq.com/embed/10a98a7b0955cb45@422?cell=*"></iframe>
-        </section>
-
-        <section>
-           <iframe width="100%" height="800" frameborder="0"
-               src="https://observablehq.com/embed/41adf74c53c43a7a@24?cell=*"></iframe>
-        </section>
+<main>
+    <section class="introduction">
+        <h2>Introduction</h2>
+        <p>The 2008 housing market collapse marked one of the most significant economic crises in recent history, triggering widespread repercussions that were felt across multiple sectors of the economy. This catastrophic event resulted from a combination of various interconnected factors ranging from monetary policy and consumer behavior to structural shifts in the housing market. Understanding this "perfect storm" involves examining the sequential events and conditions that led to the collapse, highlighting how each component interacted to create a fragile financial ecosystem. Here are the key elements that contributed to the crisis:</p>
         
-        <section>
-           <iframe width="100%" height="800" frameborder="0" 
-        src="https://observablehq.com/embed/7cec85a53460b088?cell=*"
-        style="height: 800px !important;"></iframe>
-        </section>
+        <ul>
+            <li><strong>Interest and Inflation:</strong> The period leading up to the crisis saw low interest rates, which encouraged borrowing and made mortgage loans more accessible. However, rising inflation also became a concern.</li>
+            <li><strong>Consumer Price Index (CPI):</strong> The CPI reflected rising consumer costs, including housing, during the pre-crisis period, indicating that more money was being spent on necessities, which compromised household budgets.</li>
+            <li><strong>HPI by State:</strong> Home Price Index (HPI) varied significantly across states, with many areas experiencing unsustainable increases in home prices during the housing bubble. This created disparities in housing affordability.</li>
+            <li><strong>Vacant Properties:</strong> As home prices began to fall, many homeowners who had purchased during the peak were unable to sell their homes, leading to an increase in vacant properties as foreclosures began to rise.</li>
+            <li><strong>Foreclosure:</strong> The rising rates of foreclosure resulted when homeowners, many with subprime mortgages, could no longer afford their payments, causing a surge in properties entering the market and further driving down prices.</li>
+            <li><strong>Rent Occupied:</strong> With many people losing their homes, the demand for rental properties increased, leading to higher occupancy rates in rented homes but also pushing up rental prices in many markets.</li>
+            <li><strong>Unemployment:</strong> The housing market collapse contributed to widespread job losses, leading to higher unemployment rates as businesses shuttered or reduced their workforce due to economic uncertainty and less consumer spending.</li>
+        </ul>
+    </section>
 
-        <section>
-            <iframe width="100%" height="1500" frameborder="0"
-                src="https://observablehq.com/embed/5c7af4e4c6b423e8@352?cell=*"></iframe>
-        </section>
+    <section>
+        <h2>Housing Price Index by State (2000-2015)</h2>
+        <p>This graph illustrates the dramatic rise and fall of housing prices across different states in the U.S. from 2000 to 2015. Note the steep increase leading up to 2007 and the subsequent sharp decline, marking the burst of the housing bubble.</p>
+        <iframe width="120%" height="1200" frameborder="0"
+            src="https://observablehq.com/embed/3ec0efae4de0bb26@188?cell=*"></iframe>
+    </section>
 
-        <section>
-            <h2>Impact</h2>
-            <p>The crisis had devastating effects on both homeowners and the global economy. Millions lost their homes, unemployment soared, and financial markets collapsed, leading to the worst recession since the Great Depression.</p>
-        </section>
-    </main>
+    <section>
+        <h2>Consumer Price Index and Inflation Rate (2000-2015)</h2>
+        <p>This visualization shows the trends in the Consumer Price Index (CPI) and inflation rate during the critical period of 2000-2015. Observe how these economic indicators behaved before, during, and after the 2008 crisis.</p>
+        <iframe width="100%" height="1200" frameborder="0"
+            src="https://observablehq.com/embed/a630956182f35eb2@187?cell=*"></iframe>
+    </section>
+
+    <section>
+        <h2>Vacant Properties and Foreclosure Rates (2000-2015)</h2>
+        <p>This graph displays the relationship between vacant properties and foreclosure rates from 2000 to 2015. Notice the sharp increase in both metrics as the housing crisis unfolded, reflecting the growing number of abandoned and repossessed homes.</p>
+        <iframe width="100%" height="950" frameborder="0"
+            src="https://observablehq.com/embed/10a98a7b0955cb45@422?cell=*"></iframe>
+    </section>
+
+    <section>
+        <h2>Unemployment Rate (2000-2015)</h2>
+        <p>This chart shows the unemployment rate in the United States from 2000 to 2015. Pay attention to the dramatic spike in unemployment following the 2008 financial crisis, illustrating the broader economic impact of the housing market collapse.</p>
+        <iframe width="100%" height="800" frameborder="0"
+            src="https://observablehq.com/embed/41adf74c53c43a7a@24?cell=*"></iframe>
+    </section>
+</main>
 
     <footer>
         <p>&copy; 2024 2008 Housing Crisis. All rights reserved.</p>
