--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
             font-weight: bold;
         }
 
+        .housing-price-index h2 {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .housing-price-index p {
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 15px;
+        }
+
         /* Footer */
         footer {
             background-color: #2c3e50;
@@ -95,38 +107,28 @@
         </ul>
     </section>
 
-    <section>
+    <section class="housing-price-index">
         <h2>Housing Price Index by State (2000-2015)</h2>
-        <p>This graph illustrates the dramatic rise and fall of housing prices across different states in the U.S. from 2000 to 2015. Note the steep increase leading up to 2007 and the subsequent sharp decline, marking the burst of the housing bubble.</p>
+        <p>The housing market collapse contributed to widespread job losses, leading to higher unemployment rates as businesses shuttered or reduced their workforce due to economic uncertainty and less consumer spending. This graph illustrates the dramatic rise and fall of housing prices across different states in the U.S. from 2000 to 2015. Note the steep increase leading up to 2007 and the subsequent sharp decline, marking the burst of the housing bubble.</p>
+        
         <iframe width="120%" height="1200" frameborder="0"
             src="https://observablehq.com/embed/3ec0efae4de0bb26@188?cell=*"></iframe>
     </section>
 
-    <section>
-        <h2>Consumer Price Index and Inflation Rate (2000-2015)</h2>
-        <p>This visualization shows the trends in the Consumer Price Index (CPI) and inflation rate during the critical period of 2000-2015. Observe how these economic indicators behaved before, during, and after the 2008 crisis.</p>
+    <section class="housing-price-index">
+        <h2>United States HPI Annual Change % (2000-2015)</h2>
+        <p></p>
         <iframe width="100%" height="1200" frameborder="0"
             src="https://observablehq.com/embed/a630956182f35eb2@187?cell=*"></iframe>
     </section>
 
     <section>
-        <h2>Vacant Properties and Foreclosure Rates (2000-2015)</h2>
-        <p>This graph displays the relationship between vacant properties and foreclosure rates from 2000 to 2015. Notice the sharp increase in both metrics as the housing crisis unfolded, reflecting the growing number of abandoned and repossessed homes.</p>
         <iframe width="100%" height="950" frameborder="0"
             src="https://observablehq.com/embed/10a98a7b0955cb45@422?cell=*"></iframe>
     </section>
 
     <section>
-        <h2>Unemployment Rate (2000-2015)</h2>
-        <p>This chart shows the unemployment rate in the United States from 2000 to 2015. Pay attention to the dramatic spike in unemployment following the 2008 financial crisis, illustrating the broader economic impact of the housing market collapse.</p>
-        <iframe width="100%" height="800" frameborder="0"
-            src="https://observablehq.com/embed/41adf74c53c43a7a@24?cell=*"></iframe>
+       <iframe width="100%" height="800" frameborder="0"
+           src="https://observablehq.com/embed/41adf74c53c43a7a@24?cell=*"></iframe>
     </section>
 </main>
-
-    <footer>
-        <p>&copy; 2024 2008 Housing Crisis. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
