--- a/index.html
+++ b/index.html
@@ -109,22 +109,24 @@
 
     <section class="housing-price-index">
         <h2>Housing Price Index by State (2000-2015)</h2>
-        <p>The housing market collapse contributed to widespread job losses, leading to higher unemployment rates as businesses shuttered or reduced their workforce due to economic uncertainty and less consumer spending. This graph illustrates the dramatic rise and fall of housing prices across different states in the U.S. from 2000 to 2015. Note the steep increase leading up to 2007 and the subsequent sharp decline, marking the burst of the housing bubble.</p>
+        <p>Leading up to 2008, the HPI showed a steep increase in housing prices. This led many to believe that home values would continue to rise, prompting increased speculation and investment in real estate.  The HPI indicated that homes were worth much more than their intrinsic value based on earnings and economic fundamentals. This overvaluation led to a bubble, which burst when prices began to fall.</p>
         
-       <iframe width="100%" height="1200" frameborder="0"
+       <iframe width="100%" height="800" frameborder="0"
            src="https://observablehq.com/embed/3ec0efae4de0bb26@191?cell=*"></iframe>
     </section>
 
     <section class="housing-price-index">
         <h2>United States HPI Annual Change % (2000-2015)</h2>
-        <p></p>
+        <p>This is place holder text for now.</p>
         <iframe width="100%" height="1200" frameborder="0"
             src="https://observablehq.com/embed/a630956182f35eb2@187?cell=*"></iframe>
     </section>
 
-    <section>
-        <iframe width="100%" height="950" frameborder="0"
-            src="https://observablehq.com/embed/10a98a7b0955cb45@422?cell=*"></iframe>
+    <section class="housing-price-index">
+        <h2>Inflation and Interest Rates (2000-2015)</h2>
+        <p> Interest rates were high in 2000 and began decreasing in 2001 to between 1% and 2% in 2002 - 2004.  The low interest rates encouraged borrowing and made mortgage loans more accessible.  Inflation decreased from 2000 to 2002 but began rising until 2006.  The raising inflation became a concern as household costs increased.</p>
+       <iframe width="100%" height="585" frameborder="0"
+           src="https://observablehq.com/embed/10a98a7b0955cb45@428?cells=viewof+chartSvg"></iframe>
     </section>
 
     <section>
