--- a/index.html
+++ b/index.html
@@ -129,8 +129,24 @@
            src="https://observablehq.com/embed/10a98a7b0955cb45@428?cells=viewof+chartSvg"></iframe>
     </section>
 
-    <section>
-       <iframe width="100%" height="800" frameborder="0"
-           src="https://observablehq.com/embed/41adf74c53c43a7a@24?cell=*"></iframe>
+    <section class="housing-price-index">
+        <h2>Mortgage Originations in Billions USD (2000-2015)</h2>
+        <p>The process of mortgage origination contributes to economic activity. It stimulates the housing market, influences construction and employment in related sectors, and impacts consumer spending patterns. During the housing boom, lenders significantly increased mortgage originations, including a large volume of subprime loans. These loans were extended to borrowers with poor credit histories and insufficient income verification, which increased the risk of default.</p>
+       <iframe width="100%" height="661" frameborder="0"
+           src="https://observablehq.com/embed/41adf74c53c43a7a?cells=chart"></iframe>
+    </section>
+
+    <section class="housing-price-index">
+        <h2>US Foreclosure Rate (2000-2015)</h2>
+        <p>As home prices rose, lenders began to offer more mortgages to buyers with lower credit scores, known as subprime loans. The expectation was that rising prices would prevent defaults; however, many borrowers found themselves with loans they could not afford. As housing prices started to decline in 2006, many homeowners found themselves "underwater," meaning they owed more on their mortgages than their homes were worth. This led to a wave of foreclosures and defaults, contributing to the overall market instability.</p>
+       <iframe width="100%" height="660" frameborder="0"
+           src="https://observablehq.com/embed/7cec85a53460b088?cells=chart"></iframe>
+    </section>
+
+    <section class="housing-price-index">
+        <h2>US Unemployment Rate (2000-2015)</h2>
+        <p>The unemployment rate's rise from around 4% in 2000 to approximately 6% in 2003 can be attributed to several factors including market corrections and the aftermath of the dot-com bubble burst. As companies downsized and the economy adjusted, this uptick in unemployment occurred despite efforts like lowering interest rates to stimulate borrowing and spending. Simultaneously, the housing market began to flourish during this period. The decrease in interest rates made mortgages more affordable, encouraging home buying and driving up the Housing Price Index (HPI). Many consumers capitalized on these low rates, leading to a surge in housing demand and price escalation, which contributed to a housing bubble as speculative buying took place. However, this situation began to unravel in 2006 and 2007 when interest rates began to rise again, coupled with increased inflation. Rising interest rates generally cool off the housing market as mortgage costs climb, making it less attractive for homebuyers. As real estate became less affordable, the demand decreased, and home prices began to decline. Many homeowners, especially those who purchased at inflated prices or through risky loans, found themselves in negative equity situations. This led to a spike in foreclosures as people could no longer meet their mortgage obligations. The unemployment rate lagged behind these changes in the early stages of the recession that officially began in December 2007. Many companies were hesitant to lay off workers immediately despite the economic downturn, leading to a delay in the rise of unemployment. However, as foreclosures increased and the housing market continued to decline, it put additional strain on the economy. The construction industry suffered severe job losses, and defaults in housing contributed to broader financial instability which ultimately pushed the unemployment rate significantly higher by late 2008. Unlike the foreclosure rates and housing price index, the unemployment rate didn't reach it's peak until 2009 - 2010.</p>
+       <iframe width="100%" height="693" frameborder="0"
+          src="https://observablehq.com/embed/5c7af4e4c6b423e8?cells=chart"></iframe>
     </section>
 </main>
